[WIP] got the action cable working

--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -64,18 +64,21 @@
             </div>
           </div>
         </div>
-        <div class="row feedback-box feedback-pending">
+        <!-- <div class="row feedback-box feedback-pending">
           <div class="column-12">
             <h3 class="text-center">Is this movie review actually <a href="#" class="feedback-button">good</a> or <a href="#" class="feedback-button">bad</a>?</h3>
             <p>Telling computer the truth and it shall learn and improve the classifiers over time. <a href="https://www.coursera.org/learn/machine-learning" target="_blank">Learn more about machine learning</a>.</p>
           </div>
-        </div>
-        <div class="row feedback-box feedback-given hidden">
+        </div> -->
+        <!-- <div class="row feedback-box feedback-given hidden">
           <h2 class="text-center">Thanks for the feedback!</h2>
-        </div>
+        </div> -->
+      </div>
+      <div class="row feedback-box">
+        
       </div>
     </div>
-    <div class="separator"></div>
+    <!-- <div class="separator"></div>
     <div class="row">
       <h2 class="text-center">
         Classifiers Performance
@@ -98,7 +101,7 @@
           <div class="performance-percent">84%</div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="separator"></div>
     <!-- <div class="row hidden">
       <h2 class="text-center">History</h2>
@@ -123,11 +126,9 @@
     </div> -->
     <footer class="text-center">
       <p>
-        <b>202B</b> is the code for chilli pan mee at Face2Face Noodle House.
+        <b>Athena</b> is the evil AI that tells 2 teams of Overwatch characters to kill each other.
       </p>
       <p>
-        <a href="/slides">Presentation slides</a>
-        |
         <a href="http://www.anonoz.com">Handcrafted by Anonoz</a>
       </p>
     </footer>
