--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <meta property="og:url" content="https://fyp.anonoz.com/" />
     <meta property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />
     <meta property="og:description" content="Test drive sentiment analysis for fun." />
+    <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
