--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Athena</title>
-    <meta property="og:title" content="[FYP] Athena" />
+    <title>Sentiment Analysis Demo</title>
+    <meta property="og:title" content="Sentiment Analysis Demo" />
     <meta property="og:url" content="https://fyp.anonoz.com/" />
     <meta property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />
     <meta property="og:description" content="Test drive sentiment analysis for fun." />
