--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -1,36 +1,29 @@
+<div class="jumbotron">
+  <h1>Sentiment Analysis Demo</h1>
+  <p class="text-center">
+    Let the computer analyze your movie review and tell you what you are thinking.
+  </p>
+</div>
 <div class="container">
-    <div class="header-bar">
-      <h1>Athena</h1>
-      <p class="text-center">
-        Type, or copy-paste in a movie review. Let the computer guess if you are happy or unhappy with the movie!
-      </p>
-    </div>
-    <div class="separator"></div>
     <div class="row">
-      <div class="review-input column column-6">  
-        <textarea id="movie-review-input" name="movie-review"></textarea>
+      <div class="review-input col-xs-6">  
+        <textarea class="form-control" id="movie-review-input" name="movie-review"></textarea>
         <a href="#" id="random-review-link">Show me something to copy &amp; paste to try this out</a>
       </div>
-      <div class="review-result column column-6">
+      <div class="review-result col-xs-6">
         <div class="row">
-          <div class="column column-6">
+          <div class="col-xs-6">
             <div class="sentiment-slider" id="genji-slider" data-slider-classifier="genji">
-              <!-- <div class="sentiment-result sentiment-negative sentiment-preload">
-                -ve
-              </div> -->
-              <div class="sentiment-result sentiment-positive sentiment-current">
+              <div class="sentiment-result sentiment-nothing sentiment-current">
               </div>
             </div>
             <div class="sentiment-technique">
               Genji
             </div>
           </div>
-          <div class="column column-6">
+          <div class="col-xs-6">
             <div class="sentiment-slider" id="hanzo-slider" data-slider-classifier="hanzo">
-              <!-- <div class="sentiment-result sentiment-negative sentiment-preload">
-                -ve
-              </div> -->
-              <div class="sentiment-result sentiment-positive sentiment-current">
+              <div class="sentiment-result sentiment-nothing sentiment-current">
               </div>
             </div>
             <div class="sentiment-technique">
@@ -44,7 +37,7 @@
               <!-- <div class="sentiment-result sentiment-negative sentiment-preload">
                 -ve
               </div> -->
-              <div class="sentiment-result sentiment-positive sentiment-current">
+              <div class="sentiment-result sentiment-nothing sentiment-current">
               </div>
             </div>
             <div class="sentiment-technique">
@@ -56,7 +49,7 @@
               <!-- <div class="sentiment-result sentiment-negative sentiment-preload">
                 -ve
               </div> -->
-              <div class="sentiment-result sentiment-positive sentiment-current">
+              <div class="sentiment-result sentiment-nothing sentiment-current">
               </div>
             </div>
             <div class="sentiment-technique">
