--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -38,20 +38,17 @@
             </div>
           </div>
         </div>
-        <div class="row hidden">
+        <div class="row">
           <div class="column column-6">
-            <div class="sentiment-slider">
-              <!-- <div class="sentiment-result sentiment-negative sentiment-preload">
-                -ve
-              </div> -->
+            <div class="sentiment-slider" id="lstmclassifier-slider" data-slider-classifier="lstmclassifier">
               <div class="sentiment-result sentiment-nothing sentiment-current">
               </div>
             </div>
             <div class="sentiment-technique">
-              Feed Forward NN
+              LSTM
             </div>
           </div>
-          <div class="column column-6">
+          <div class="column column-6 hidden">
             <div class="sentiment-slider">
               <!-- <div class="sentiment-result sentiment-negative sentiment-preload">
                 -ve
