Sped up CSS animation

--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -57,7 +57,7 @@
               </div>
             </div>
             <div class="sentiment-technique">
-              Mutli-class SVM
+              SVM
             </div>
           </div>
         </div>
@@ -123,10 +123,7 @@
     </div> -->
     <footer class="text-center">
       <p>
-        <b>Athena</b> is the evil AI that tells 2 teams of Overwatch characters to kill each other.
-      </p>
-      <p>
-        <a href="http://www.anonoz.com">Handcrafted by Anonoz</a>
+        <a href="http://www.anonoz.com">FYP of Anonoz</a>
       </p>
     </footer>
 </div>
