WIP adding ground truth reporting buttons

--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -61,15 +61,22 @@
             </div>
           </div>
         </div>
-        <!-- <div class="row feedback-box feedback-pending">
+        <div class="row feedback-box feedback-pending">
           <div class="column-12">
-            <h3 class="text-center">Is this movie review actually <a href="#" class="feedback-button">good</a> or <a href="#" class="feedback-button">bad</a>?</h3>
-            <p>Telling computer the truth and it shall learn and improve the classifiers over time. <a href="https://www.coursera.org/learn/machine-learning" target="_blank">Learn more about machine learning</a>.</p>
+            <h3 class="text-center">This movie actually...</h3>
+            <div class="row">
+              <div class="col-xs-6">
+                <a href="#" class="btn btn-default btn-block btn-success">Rocks</a>
+              </div>
+              <div class="col-xs-6">
+                <a href="#" class="btn btn-default btn-block btn-danger">Sucks</a>
+              </div>
+            </div>
           </div>
-        </div> -->
-        <!-- <div class="row feedback-box feedback-given hidden">
+        </div>
+        <div class="row feedback-box feedback-given hidden">
           <h2 class="text-center">Thanks for the feedback!</h2>
-        </div> -->
+        </div>
       </div>
       <div class="row feedback-box">
         
