Modified classifier services to interact with new consolidated classifier microservices.
Also:
* Added pages that list predictions and corrections for analysis.
* This version is demoed during FYP day.

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -92,6 +92,14 @@ textarea[name="movie-review"] {
   }
 }
 
+.sentiment-error {
+  color: gray;
+
+  &::before {
+    content: "ERR";
+  }
+}
+
 .sentiment-technique {
   color: gray;
   text-align: center;
