--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -41,7 +41,7 @@
               </div>
             </div>
             <div class="sentiment-technique">
-              Genji
+              CNN (GoogleNews word vectors)
             </div>
           </div>
           <div class="col-xs-6">
@@ -50,7 +50,7 @@
               </div>
             </div>
             <div class="sentiment-technique">
-              Hanzo
+              CNN (IMDb word vectors)
             </div>
           </div>
           <div class="col-xs-6">
@@ -153,6 +153,7 @@
 </div>
 <footer class="text-center">
   <p>
-    <a href="http://www.anonoz.com">FYP of Anonoz</a>
+    <a href="http://www.anonoz.com">Made by Anonoz</a> | 
+    <a href="https://www.github.com/anonoz/fyp-athena">Source Code</a>
   </p>
 </footer>
