Updated docker-compose.yml to mount current host directory - thus enabling development using docker compose

--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -100,7 +100,7 @@
         </div>
       </div>
       <div class="row feedback-box">
-        
+
       </div>
     </div>
     <!-- <div class="separator"></div>
@@ -149,11 +149,14 @@
         </tr>
       </table>
     </div> -->
-    
+
 </div>
 <footer class="text-center">
   <p>
-    <a href="http://www.anonoz.com">Made by Anonoz</a> | 
-    <a href="https://www.github.com/anonoz/fyp-athena">Source Code</a>
+    <a href="http://www.anonoz.com">Made by Anonoz</a> |
+    <a href="https://www.github.com/anonoz/fyp-athena">Source Code</a> |
+    <a href="/predictions">Predictions</a> |
+    <a href="/corrections">Corrections</a> |
+    <a href="#">Donate Ethereum</a>
   </p>
 </footer>
